[package]
name = "band"
version = "0.1.0"
edition = "2021"
description = "Soon to be an ECS."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "*"
rayon = "*"
tokio = { version = "*", features = ["full"] }
futures = "*"