[package]
name = "band"
version = "0.1.0"
edition = "2021"
description = "Soon to be an ECS."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.14.2"
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3.28"
band_proc_macro = {  path = "./band_proc_macro" }